# dendritic-computation

./: .gitignore  README.md  StructuralPlasticity.md  dendritic_pytorch.py  experiment_dendritic_ratios.py  grid_search.py  main.py  minimal.py  modules.py  notebook.py  pyproject.toml  test_dendritic_params.py  training.py  utils.py  visualize_results.py
advanced/: README.md  data.py  example_hyperparameter_tuning.py  main.py  modules.py  training.py  utils.py
experiments/: dendritic_pytorch.py  t_data.py  t_main.py  t_modules.py  t_training.py
hp_search/: HYPERPARAMETER_SEARCH_README.md  grid_search.py  hyperparameter_examples.py  hyperparameter_search.py  visualize_results.py
notebooks/: basic_experiment copy.ipynb  basic_experiment.ipynb  comparison-95-acc.ipynb  comparison.ipynb  droplinear_comparison.ipynb  minimal-80-90-acc.ipynb
